--- a/locales/en.json
+++ b/locales/en.json
@@ -4,6 +4,18 @@
       "permissionDenied": "Permission Denied",
       "permissionMessage": "You need to grant contacts permission to use this feature.",
       "ok": "OK"
+    },
+    "settings": {
+      "language": "Settings",
+      "darkMode": "Dark mode"
+    },
+    "menus": {
+      "logout": "Logout",
+      "profile": "Profile",
+      "home": "Home",
+      "signin": "SignIn",
+      "signup": "SignUp",
+      "calculator": "Calculator"
     }
   }
   
